--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
-title: Hanlin Cai
+title: Zhen Yang
 # tagline: Two roads diverged in woods, I took the one less traveled by.
-description: Two roads diverged in woods, I took the one less traveled by.
+description: 真菜馆长
 #Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
+url: https:/zcgyang.github.io
 
 # Owner/author information
 owner:
-  name: Hanlin Cai
-  avatar: hanlin.jpg
+  name: Zhen Yang
+  avatar: fav.png
 #  bio:
-  email: hanlin.cai@ieee.org
+  email: yangzhen@buaa.edu.cn
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
+  # twitter: lancecai2002
   # facebook: caihanlin2002
-  github: GuangLun2000
-  linkedin: hanlin-cai-07b53b23b
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  # github: GuangLun2000
+  # linkedin: hanlin-cai-07b53b23b
+  scholar: https://scholar.google.com/citations?user=n-8n85EAAAAJ&hl=en
   # instagram: lancecai2002
   # lastfm:
   # tumblr:
@@ -40,8 +40,8 @@ links:
     url: /projects/
   - title: Awards
     url: /awards/
-  - title: Hobbies
-    url: /hobbies/
+  # - title: Hobbies
+  #   url: /hobbies/
   - title: Blogs
     url: /blogs/
 
