--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Zhen Yang
 # tagline: Two roads diverged in woods, I took the one less traveled by.
 description: 真菜馆长
 #Comment out url when working locally to resolve base urls correctly
-url: https:/zcgyang.github.io
+url: https://zcgyang.github.io
 
 # Owner/author information
 owner:
