修改文件链接

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ links:
   - title: Publications
     url: /publications/
   - title: CV
-    url: (https://zcgyang.github.io/file/CV-Zhen Yang-online.pdf) 
+    url: /file/CV-Zhen Yang-online.pdf
   - title: Projects
     url: /projects/
   - title: Awards
