--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ links:
     url: /awards/
   # - title: Hobbies
   #   url: /hobbies/
-  - title: Blogs
-    url: /blogs/
+  - title: Resources
+    url: /resources/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone: Asia/Shanghai
