--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ links:
     url: /file/CV-Zhen Yang-online.pdf
   - title: Projects
     url: /projects/
-  - title: Awards
-    url: /awards/
+  # - title: Awards
+  #   url: /awards/
   # - title: Hobbies
   #   url: /hobbies/
   - title: Resources
